force-app/main/default/objects/Batch_Configuration_Settings__mdt/Batch_Configuration_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Batch Configuration Settings</label>
    <pluralLabel>Batch Configuration Settings</pluralLabel>
</CustomObject>