force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Batch_Result_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Batch_Result_Email_Body__c</fullName>
    <label>Batch Result Email Body</label>
    <length>55000</length>
    <type>LongTextArea</type>
</CustomField>