force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Batch_Result_Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Batch_Result_Email_Recipients__c</fullName>
    <label>Batch Result Email Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>