force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Batch_Result_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Batch_Result_Email_Subject__c</fullName>
    <label>Batch Result Email Subject</label>
    <length>55</length>
    <type>Text</type>
</CustomField>