force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Batch_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Batch_SOQL__c</fullName>
    <label>Batch SOQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>