force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Delta_Load_Condition__c.field-meta.xml
<CustomField>
    <fullName>Delta_Load_Condition__c</fullName>
    <label>Delta Load Condition</label>
    <length>55000</length>
    <type>LongTextArea</type>
</CustomField>