force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Full_Load__c.field-meta.xml
<CustomField>
    <fullName>Full_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Load</label>
    <type>Checkbox</type>
</CustomField>