force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Max_Reprocess_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Reprocess_Count__c</fullName>
    <label>Max Reprocess Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>