force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Next_Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Next_Batch_Class__c</fullName>
    <label>Next Batch Class</label>
    <length>55</length>
    <type>Text</type>
</CustomField>