force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Reprocess_Failures__c.field-meta.xml
<CustomField>
    <fullName>Reprocess_Failures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprocess Failures</label>
    <type>Checkbox</type>
</CustomField>