force-app/main/default/objects/Batch_Configuration_Settings__mdt/fields/Send_Email_to_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Running_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email to Running User</label>
    <type>Checkbox</type>
</CustomField>